# Cyclops

./: .RData  .Rbuildignore  .covrignore  .gitignore  .travis.yml  CMakeLists.txt  CRAN-SUBMISSION  Cyclops-2.Rproj  Cyclops.Rproj  DESCRIPTION  NAMESPACE  NEWS  NEWS.md  NEWS.old  README  README.md  RcppVexCLfun.R  TODO.txt  TODO_efron.txt  cleanup  configure  configure.ac  configure.win  cran-comments.md  deploy.sh  make-tar  outline_new_interface.txt
C/: .gitignore  CMakeLists.txt
C/CMake/: FindODBC.cmake
C/codebase/CCD/: AbstractCrossValidationDriver.cpp  AbstractCrossValidationDriver.h  AbstractDriver.cpp  AbstractDriver.h  AbstractModelSpecifics.cpp  AbstractModelSpecifics.h  AbstractSelector.cpp  AbstractSelector.h  AutoSearchCrossValidationDriver.cpp  AutoSearchCrossValidationDriver.h  BetterGPU.cpp  BetterGPU.h  BootstrapDriver.cpp  BootstrapDriver.h  BootstrapSelector.cpp  BootstrapSelector.h  CCTestInputReader.cpp  CCTestInputReader.h  CLRInputReader.cpp  CLRInputReader.h  CMakeLists.txt  CompressedDataMatrix.cpp  CompressedDataMatrix.h  CompressedIndicatorMatrix.cpp  CompressedIndicatorMatrix.h  Constraints.h  CoxInputReader.cpp  CoxInputReader.h  CredibleIntervals.cpp  CredibleIntervals.h  CrossValidationDriver.cpp  CrossValidationDriver.h  CrossValidationSelector.cpp  CrossValidationSelector.h  CyclicCoordinateDescent.cpp  CyclicCoordinateDescent.h  GPUContainer.h  GPUCyclicCoordinateDescent.cpp  GPUCyclicCoordinateDescent.h  GeneralizedDirectSampler.cpp  (+51 more)
C/codebase/CCD-DP/: CMakeLists.txt
C/codebase/CCD/MCMC/: BetaParameter.cpp  BetaParameter.h  CredibleIntervals.cpp  CredibleIntervals.h  HyperpriorParameter.cpp  HyperpriorParameter.h  IndependenceSampler.cpp  IndependenceSampler.h  MCMCDriver.cpp  MCMCDriver.h  MCMCModel.cpp  MCMCModel.h  MHRatio.cpp  MHRatio.h  Model.cpp  ModelPrior.cpp  ModelPrior.h  ModelSampler.cpp  ModelSampler.h  ModelSelectionDriver.cpp  ModelSelectionDriver.h  OneDimensionRandomWalk.cpp  OneDimensionRandomWalk.h  Parameter.cpp  Parameter.h  RandomWalk.cpp  RandomWalk.h  SigmaSampler.cpp  SigmaSampler.h  TransitionKernel.cpp  TransitionKernel.h
C/codebase/CCD/imputation/: CMakeLists.txt  ImputationPolicy.cpp  ImputationPolicy.h  ImputeVariables.cpp  ImputeVariables.h  ccdimpute.cpp  ccdimpute.h
C/codebase/CCD/io/: BBRInputReader.h  BBROutputWriter.h  BaseInputReader.h  CCTestInputReader.cpp  CCTestInputReader.h  CLRInputReader.cpp  CLRInputReader.h  CSVInputReader.h  CoxInputReader.cpp  CoxInputReader.h  HierarchyReader.cpp  HierarchyReader.h  InputOutputSystem.cpp  InputOutputSystem.h  InputReader.cpp  InputReader.h  NewCLRInputReader.h  NewCoxInputReader.h  NewGenericInputReader.h  NewSCCSInputReader.h  OutputWriter.h  RTestInputReader.cpp  RTestInputReader.h  SCCSInputReader.cpp  SCCSInputReader.h  SparseIndexer.h
C/codebase/CCD/priors/: CovariatePrior.h  JointPrior.h
C/codebase/CUDARuntime/: CMakeLists.txt  CUSPEngine.cu  CUSPEngine.h  Makefile  cmake_install.cmake  test
C/codebase/GPU/: CMakeLists.txt  GPUDataPartition.h  GPUImplDefs.h  GPUImplHelper.cpp  GPUInterface.h  GPUInterfaceCUDA.cpp  KernelLauncherCCD.cpp  KernelLauncherCCD.h
C/codebase/GPU-DP/: CMakeLists.txt
C/codebase/GPU-DP/kernels/: CCDKernels.h
C/codebase/GPU/kernels/: CCDKernels.h  kernelAll.cu  kernelReductions.cu  kernelSpmvCoo.cu
C/codebase/jni/: CMakeLists.txt  dr_inference_regression_RegressionJNIWrapper.cpp  dr_inference_regression_RegressionJNIWrapper.h
C/codebase/utils/: HParSearch.cpp  HParSearch.h  RZeroIn.h
R/: Abridge.R  CCD.R  CrossValidationControl.R  Cyclops-package.R  DataConversion.R  DataManagement.R  ExampleData.R  GetFrineGrayWeights.R  Gpu.R  Insurance-pr.txt  LegacyDataConversion.R  ModelFit.R  Multitype.R  NewDataConversion.R  PackageMaintenance.R  ParameterizedPrior.R  Predict.R  RcppExports.R  Residuals.R  Simulation.R  SpecialPriors.R  Survfit.R  TimeEffects.R  WeightBasedSearchControl.R  ceb-pr.txt  cox-tiny-test-bbr.txt  cox-tiny-test-new-cox.txt  cox-tiny-test.txt  cox.txt  coxMM.R  cyclops-internal.R  cyclops.R  cyclopsCoxMM.R  getFineGrayWeights.R  glmnetCoxMM.R  infert-pr.txt  infert.txt  ships-pr.txt  (+3 more)
R.old/: cox-10-sorted.txt  cox-tiny-sorted.txt  cox.txt  infert-bbr.txt  infert-lr.txt  sccs_multivar_bbr.R  test-pr.txt  try_gds.R
standalone/: CMakeLists.txt  Compile-using-RTools.txt
standalone/codebase/CCD/: AbstractModelSpecifics.cpp  BootstrapSelector.cpp  CMakeLists.txt  CmdLineCcdInterface.cpp  CmdLineCcdInterface.h  CompressedDataMatrix.h  CyclicCoordinateDescent.cpp  GPUCyclicCoordinateDescent.cpp  GPUCyclicCoordinateDescent.h  HierarchyGridSearchCrossValidationDriver.cpp  ModelData.cpp  ModelData.h  ccd.cpp  ccd.h
standalone/codebase/CCD-DP/: CMakeLists.txt
standalone/codebase/CCD/imputation/: ImputationPolicy.h  ccdimpute.cpp  ccdimpute.h
standalone/codebase/CCD/io/: BBRInputReader.h  BBROutputWriter.h  BaseInputReader.h  CCTestInputReader.cpp  CCTestInputReader.h  CLRInputReader.cpp  CLRInputReader.h  CmdLineProgressLogger.h  CoxInputReader.cpp  CoxInputReader.h  HierarchyReader.cpp  HierarchyReader.h  InputReader.h  NewCLRInputReader.h  NewCoxInputReader.h  NewSCCSInputReader.h  OutputWriter.h  RTestInputReader.cpp  RTestInputReader.h  SCCSInputReader.cpp  SCCSInputReader.h
standalone/codebase/GPU/: CMakeLists.txt  GPUImplHelper.h  GPUInterfaceCUDA.cpp
standalone/codebase/GPU-DP/: CMakeLists.txt
standalone/codebase/GPU/kernels/: kernelSpmvCsr.cu
standalone/codebase/GPU_COX/: CmdLineCcdInterface.cpp  gpu_cox.cpp
standalone/codebase/GPU_COX-SP/: CMakeLists.txt
standalone/codebase/GPU_COX/io/: BaseInputReader.h  CSVInputReader.h  CmdLineProgressLogger.h  InputReader.cpp  InputReader.h  NewCoxInputReader.h
standalone/codebase/jni/: CMakeLists.txt  dr_inference_regression_RegressionJNIWrapper.cpp
standalone/example/: cox-tiny-test-new-cox.txt  cox-tiny-test.txt  fg-tiny-sparse-test-w-first.txt  fg-tiny-sparse-test.txt  fg-tiny-test-w-first.txt  fg-tiny-test.txt  fg-tiny-tied-sparse-test-w-first.txt  fg-tiny-tied-sparse-test.txt  fg-tiny-tied-test-w-first.txt  fg-tiny-tied-test.txt
(+463 files in other folders)
